# HailMary

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: ccpp.yml
src/: main.cpp  meson.build
src/harlequin/: CMakeLists.txt  DialogManager.cpp  DialogManager.hpp  MusicManager.cpp  MusicManager.hpp  ScriptManager.cpp  ScriptManager.hpp  harlequin_api.cpp  harlequin_api.hpp  meson.build
src/harlequin/include/: DialogManager.hpp  MusicManager.hpp  ScriptManager.hpp  harlequin_api.hpp
src/internals/: RandomNumberGenerator.cpp  meson.build
src/internals/include/: CachedFactory.hpp  RandomNumberGenerator.hpp  TrefusisConfig.hpp
src/managers/: CMakeLists.txt  GameManager.cpp  GameManager.h  GameManager.hpp  Globals.cpp  GraphicsManager.cpp  GraphicsManager.hpp  Level.cpp  Level.hpp  SaveManager.cpp  SaveManager.hpp  Texture.cpp  TimeManager.cpp  TimeManager.hpp  meson.build
src/managers/include/: GameManager.hpp  Globals.hpp  GraphicsManager.hpp  Level.hpp  SaveManager.hpp  Texture.hpp  TimeManager.hpp
src/objects/: Actor.cpp  Actor.hpp  CMakeLists.txt  Character.cpp  Character.hpp  Player.cpp  Player.hpp  meson.build
src/objects/include/: Actor.hpp  Character.hpp  Player.hpp
src/trefusisInternals/: CMakeLists.txt  RandomNumberGenerator.hpp  TrefusisConfig.cpp  TrefusisConfig.hpp
